--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+  --trans: .5s all ease-in-out;
 }
 
 body {
@@ -27,8 +28,8 @@ body {
   background-color: var(--color-primary);
   font-size: 1.1rem;
   color: var(--color-white);
-  -webkit-transition: .4s all ease-in-out;
-  transition: .4s all ease-in-out;
+  -webkit-transition: var(--trans);
+  transition: var(--trans);
   overflow-x: hidden;
 }
 
@@ -43,5 +44,63 @@ section {
   position: absolute;
   left: 10;
   padding: 3rem 8rem;
+}
+
+.section {
+  -webkit-transform: translateY(-100%) scale(0);
+          transform: translateY(-100%) scale(0);
+  -webkit-transition: var(--trans);
+  transition: var(--trans);
+  background-color: var(--color-primary);
+  display: none;
+}
+
+.sec1, .sec2, .sec3, .sec4, .sec5 {
+  -webkit-transform: translateY(0) scale(1);
+          transform: translateY(0) scale(1);
+}
+
+.controls {
+  position: fixed;
+  top: 50%;
+  right: 3vh;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.controls .btn_active {
+  background-color: var(--color-secondary) !important;
+  -webkit-transition: var(--trans);
+  transition: var(--trans);
+}
+
+.controls .btn_active i {
+  color: var(--color-white) !important;
+}
+
+.controls .control {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1rem;
+  cursor: pointer;
+  background-color: var(--color-grey-4);
+  margin-top: 1rem;
+  -webkit-box-shadow: var(--box-shadow-1);
+          box-shadow: var(--box-shadow-1);
+}
+
+.controls .control i {
+  font-size: 1.25rem;
+  color: var(--color-grey-2);
 }
 /*# sourceMappingURL=style.css.map */
