--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,13 +18,14 @@
     --color-grey-6: #12181b;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+    --trans : .5s all ease-in-out;
 }
 body{
     font-family: "Poppins";
     background-color: var(--color-primary);
     font-size: 1.1rem;
     color: var(--color-white);
-    transition: .4s all ease-in-out;
+    transition: var(--trans);
     overflow-x: hidden;
 }
 header{
@@ -37,4 +38,46 @@ section{
     position: absolute;
     left: 10;
     padding: 3rem 8rem;
+}
+.section{
+    transform: translateY(-100%) scale(0);
+    transition: var(--trans);
+    background-color: var(--color-primary);
+    display: none;
+}
+.sec1,.sec2,.sec3,.sec4,.sec5{
+    transform: translateY(0) scale(1);
+}
+
+// Controls
+.controls{
+    position: fixed;
+    top: 50%;
+    right: 3vh;
+    transform: translateY(-50%);
+    .btn_active{
+        background-color: var(--color-secondary) !important;
+        transition: var(--trans);
+        i{
+            color: var(--color-white) !important;
+        }
+    }
+    .control{
+        width: 55px;
+        height: 55px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+        cursor: pointer;
+        background-color: var(--color-grey-4);
+        margin-top: 1rem;
+        box-shadow: var(--box-shadow-1);
+        i{
+            font-size: 1.25rem;
+            color: var(--color-grey-2);
+            // pointer-events: none;
+        }
+    }
 }
