--- a/styles/style.css
+++ b/styles/style.css
@@ -52,18 +52,45 @@ section {
   -webkit-transition: var(--trans);
   transition: var(--trans);
   background-color: var(--color-primary);
-  display: none;
+}
+
+.active {
+  display: block !important;
 }
 
 .sec1, .sec2, .sec3, .sec4, .sec5 {
   -webkit-transform: translateY(0) scale(1);
           transform: translateY(0) scale(1);
+  display: none;
+}
+
+.sec2 {
+  background-color: #55659d;
+}
+
+.sec3 {
+  background-color: #1542e6;
+}
+
+.sec4 {
+  background-color: #b1bbde;
+}
+
+.sec5 {
+  background-color: #0f1631;
 }
 
 .controls {
   position: fixed;
   top: 50%;
   right: 3vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
