--- a/styles/style.scss
+++ b/styles/style.scss
@@ -45,7 +45,7 @@ section{
     background-color: var(--color-primary);
 }
 .active{
-    display: block !important;
+    display: block;
 }
 .sec1,.sec2,.sec3,.sec4,.sec5{
     transform: translateY(0) scale(1);
