--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,34 @@ section {
 }
 
 .active {
-  display: block;
+  display: block !important;
+}
+
+.btn_active, .iconka {
+  -webkit-animation: anime .8s ease-in-out;
+          animation: anime .8s ease-in-out;
+}
+
+@-webkit-keyframes anime {
+  0% {
+    -webkit-transform: translateY(-100%) scale(0);
+            transform: translateY(-100%) scale(0);
+  }
+  100% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
+}
+
+@keyframes anime {
+  0% {
+    -webkit-transform: translateY(-100%) scale(0);
+            transform: translateY(-100%) scale(0);
+  }
+  100% {
+    -webkit-transform: translateY(0) scale(1);
+            transform: translateY(0) scale(1);
+  }
 }
 
 .sec1, .sec2, .sec3, .sec4, .sec5 {
@@ -77,7 +104,7 @@ section {
 }
 
 .sec5 {
-  background-color: #0f1631;
+  background-color: #179e0e;
 }
 
 .controls {
@@ -87,6 +114,7 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  z-index: 10;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
