--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,7 +18,7 @@
     --color-grey-6: #12181b;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
-    --trans : .5s all ease-in-out;
+    --trans : all .5s  ease-in-out;
 }
 body{
     font-family: "Poppins";
@@ -36,18 +36,19 @@ section{
     min-height: 100vh;
     width: 100%;
     position: absolute;
-    left: 10;
+    left: 0;
+    top: 0;
     padding: 3rem 8rem;
 }
-.section{
-    transform: translateY(-100%) scale(0);
-    transition: var(--trans);
-    background-color: var(--color-primary);
-}
+// .section{
+//     transform: translateY(-100%) scale(0);
+//     transition: var(--trans);
+//     background-color: var(--color-primary);
+// }
 .active{
     display: block !important;
 }
- .btn_active,.iconka{
+.btn_active{
     animation: anime .8s ease-in-out;
     @keyframes anime{
         0%{
@@ -99,7 +100,45 @@ section{
         i{
             font-size: 1.25rem;
             color: var(--color-grey-2);
-            // pointer-events: none;
+        }
+    }
+}
+// Header content 
+.header_content{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    // height: 100vh;
+    .left_header{
+        display: flex;
+        position: relative;
+        align-items: center;
+        .back_shape{
+            position: absolute;
+            transition: var(--trans);
+            top: 0;
+            left: 0;
+            z-index: -1;
+            background-color: var(--color-secondary);
+            width: 65%;
+            height: 100vh;
+            clip-path: polygon(0 0, 69% 0, 89% 100%, 0% 100%);
+        }
+        .image{
+            border-radius: var(--br-sm-2);
+            width: 68%;
+            height: 90%;
+            padding-left: 4rem;
+            transition: var(--trans);
+            img{    
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                transition: var(--trans);
+                filter: grayscale(100%);
+                &:hover{
+                    filter: grayscale(0);
+                }
+            }
         }
     }
 }
