--- a/styles/style.css
+++ b/styles/style.css
@@ -207,4 +207,90 @@ section {
   -webkit-filter: grayscale(0);
           filter: grayscale(0);
 }
+
+.header_content .right_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-right: 8rem;
+}
+
+.header_content .right_header .name {
+  font-size: 3rem;
+}
+
+.header_content .right_header .name span {
+  color: var(--color-secondary);
+}
+
+.header_content .right_header p {
+  padding: 1rem 0;
+  line-height: 2rem;
+}
+
+.btn_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.btn_container .download_btn {
+  text-decoration: none;
+  color: inherit;
+  border: 1px solid var(--color-secondary);
+  border-radius: 30px;
+  font-weight: 600;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  overflow: hidden;
+}
+
+.btn_container .download_btn .download_text {
+  padding: 0 2rem;
+}
+
+.btn_container .download_btn .download_icon {
+  padding: 1rem;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: var(--color-secondary);
+}
+
+.btn_container .download_btn .download_icon::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: var(--trans);
+  transition: var(--trans);
+  z-index: -1;
+}
+
+.btn_container .download_btn .download_icon:hover::before {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-secondary);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
 /*# sourceMappingURL=style.css.map */
