--- a/styles/style.scss
+++ b/styles/style.scss
@@ -141,4 +141,64 @@ section{
             }
         }
     }
+    .right_header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-right: 8rem;
+        .name{
+            font-size: 3rem;
+            span{
+                color: var(--color-secondary);
+            }
+        }
+        p{
+            padding: 1rem 0;
+            line-height: 2rem;
+        }
+    }
+}
+.btn_container{
+    display: flex;
+    align-self: flex-start;
+    .download_btn{
+        text-decoration: none;
+        color: inherit;
+        border: 1px solid var(--color-secondary);
+        border-radius: 30px;
+        font-weight: 600;
+        position: relative;
+        display: flex;
+        align-items: center;
+        align-self: flex-start;
+        overflow: hidden;
+        .download_text{
+            padding: 0 2rem;
+        }
+        .download_icon{
+            padding: 1rem;
+            border-radius: 50%;
+            display: flex;
+            // justify-content: center;
+            background-color: var(--color-secondary);
+            // align-items: center;
+            &::before{
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                transform: translateX(100%);
+                transition: var(--trans);
+                z-index: -1;
+            }
+            &:hover{
+                &::before{
+                    width: 100%;
+                    height: 100%;
+                    background-color: var(--color-secondary);
+                    transform: translateX(0);
+                }
+            }
+        }
+    }
 }
