--- a/styles/style.css
+++ b/styles/style.css
@@ -395,4 +395,134 @@ section {
 .about_container .left_about h2 {
   text-transform: uppercase;
 }
+
+.about_stats .progress_bars {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 2rem;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+.about_stats .progress_bars .progress_bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: var(--trans);
+  transition: var(--trans);
+}
+
+.about_stats .progress_bars .progress_bar .progress_title {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.about_stats .progress_bars .progress_bar .progress_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about_stats .progress_bars .progress_bar .progress_container .progress_text {
+  color: var(--color-grey-2);
+  padding-right: 1rem;
+}
+
+.about_stats .progress_bars .progress_bar .progress_container .progress_itself {
+  position: relative;
+  width: 100%;
+  height: .44rem;
+  background-color: var(--color-grey-4);
+}
+
+.about_stats .progress_bars .progress_bar .progress_container .progress_itself span {
+  position: absolute;
+  width: 90%;
+  background-color: var(--color-secondary);
+  height: 100%;
+}
+
+.about_stats .progress_bars .progress_bar .progress_container .progress_itself .css {
+  width: 85%;
+}
+
+.about_stats .progress_bars .progress_bar .progress_container .progress_itself .js, .about_stats .progress_bars .progress_bar .progress_container .progress_itself .boots {
+  width: 75%;
+}
+
+.about_stats .progress_bars .progress_bar .progress_container .progress_itself .react {
+  width: 70%;
+}
+
+.my_skills {
+  text-transform: uppercase;
+  text-align: center;
+  padding: 3rem;
+}
+
+.timeline_container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding-bottom: 3rem;
+}
+
+.timeline_container .timeline_item {
+  position: relative;
+  border-left: 1px solid var(--color-grey-5);
+  padding-left: 2rem;
+}
+
+.timeline_container .timeline_item .timeline_icon {
+  position: absolute;
+  left: -27px;
+  top: 0;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: var(--color-secondary);
+  font-size: 1.4rem;
+}
+
+.timeline_container .timeline_item .timeline_duration {
+  background-color: var(--color-grey-5);
+  display: inline-block;
+  padding: .2rem .6rem;
+  border-radius: 15px;
+  font-size: .9rem;
+  font-weight: 700;
+}
+
+.timeline_container .timeline_item h5 {
+  padding: .7rem 0;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+}
+
+.timeline_container .timeline_item h5 span {
+  color: var(--color-grey-2);
+  font-size: 1.2rem;
+}
+
+.timeline_container .timeline_item p {
+  color: var(--color-grey-2);
+}
 /*# sourceMappingURL=style.css.map */
