--- a/styles/style.scss
+++ b/styles/style.scss
@@ -63,10 +63,8 @@ section{
     transform: translateY(0) scale(1);
     display: none;
 }
-.sec3{background-color: #1542e6;}
 .sec4{background-color: #b1bbde;}
 .sec5{background-color: #179e0e;}
-
 
 // Controls
 .controls{
@@ -282,7 +280,6 @@ section{
         }
     }
 }
-
 .about_stats{
     // text-align: center;
     .progress_bars{
@@ -327,6 +324,18 @@ section{
     text-transform: uppercase;
     text-align: center;
     padding: 3rem;
+    position: relative;
+    &::before{
+        content: '';
+        height: 1px;
+        position: absolute;
+        top: 1rem;
+        left: 50%;
+        background-color: var(--color-grey-5);
+        transform: translateX(-50%);
+        width: 40%;
+
+    }
 }
 // Timeline
 .timeline_container{
@@ -370,6 +379,80 @@ section{
         }
         p{
             color: var(--color-grey-2);
+        }
+    }
+}
+
+// Portfolio
+.port_text{
+    padding: 1rem 0 2.5rem;
+    text-align: center;
+    font-size: 1.2rem;
+}
+.portfolio_container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 2rem;
+    .portfolio_item{
+        position: relative;
+        border-radius: 15px;
+        &:hover{
+            .hover_port_item{
+                opacity: 1;
+                transition: var(--trans);
+                transform: scale(1);
+            }
+        } 
+        img{
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+            border-radius: 15px;
+        }
+        .hover_port_item{
+            opacity: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 15px;
+            position: absolute;
+            display: flex;
+            top:0;
+            left: 0;
+            background-color: var(--color-secondary);
+            text-align: center;
+            flex-direction: column;
+            justify-content: center;
+            transform: scale(0);
+            h3{
+                font-size: 1.8rem;
+                margin-bottom: 1rem;
+            }
+            .icons{
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                padding: 0 1rem;
+                .icon{
+                    font-size: 1.8rem;
+                    color: var(--color-white);
+                    width: 3.3rem;
+                    height: 3.3rem;
+                    border-radius: 50%;
+                    display: flex;
+                    text-decoration: none;
+                    cursor: pointer;
+                    transition:var(--trans) ;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: var(--color-grey-5);
+                    &:hover{
+                        background-color: var(--color-white);
+                        i{
+                            color: var(--color-primary);
+                        }
+                    }
+                }
+            }
         }
     }
 }
