--- a/styles/style.scss
+++ b/styles/style.scss
@@ -63,7 +63,6 @@ section{
     transform: translateY(0) scale(1);
     display: none;
 }
-.sec4{background-color: #b1bbde;}
 .sec5{background-color: #179e0e;}
 
 // Controls
@@ -452,6 +451,61 @@ section{
                         }
                     }
                 }
+            }
+        }
+    }
+}
+
+// Blogs
+.blogs_container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin-top: 3rem;
+    grid-gap: 2rem;
+    .blog_item{
+        position: relative;
+        cursor: pointer;
+        transition: var(--trans);
+        background-color: var(--color-grey-5);
+        box-shadow: 1px 1px 20px rgba(0,0,0,.1);
+        border-radius: .4rem;
+        &:hover{
+            box-shadow: 1px 1px 20px rgba(0,0,0,.33);
+            transform: translateY(-5px);
+            transition: var(--trans);
+            img{
+                filter: grayscale(0);
+                transform:scale(1.05);
+                transition: var(--trans);
+                box-shadow: 1px 4px 20px rgba(0,0,0,.8);
+                border-bottom-left-radius: .4rem;
+                border-bottom-right-radius: .4rem;
+            }
+        }
+        img{
+            width: 100%;
+            filter: grayscale(100%);
+            height: auto;
+            transition: var(--trans);
+            object-fit: cover;
+            border-top-left-radius: .4rem;
+            border-top-right-radius: .4rem;
+        }
+        .blog_text{
+            margin-top: -5px;
+            padding: 1.1rem;
+            border-top: .5rem solid var(--color-secondary);
+            h3{
+                margin-bottom: .7rem;
+                transition: var(--trans);
+                &:hover{
+                    color: var(--color-secondary);
+                }
+            }
+            p{
+                color: var(--color-grey-2);
+                line-height: 1.8rem;
+                margin-bottom: .6rem;
             }
         }
     }
