--- a/styles/style.css
+++ b/styles/style.css
@@ -6,18 +6,27 @@
   list-style: none;
 }
 
+.light_mode {
+  --color-primary: #fff;
+  --color-secondary: #f56692;
+  --color-white: #454e56;
+  --color-black: #000;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #2e73a7;
+  --color-grey-4: #454e56;
+  --color-grey-5: #f8f8f8;
+  --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+}
+
 :root {
   --color-primary: #191d2b;
   --color-secondary: #27AE60;
   --color-white: #FFFFFF;
   --color-black: #000;
-  --color-grey0: #f8f8f8;
   --color-grey-1: #dbe1e8;
   --color-grey-2: #b2becd;
-  --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
-  --color-grey-6: #12181b;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
   --trans: all .5s  ease-in-out;
@@ -715,7 +724,75 @@ section {
   display: grid;
   -ms-grid-columns: 3fr 5fr;
       grid-template-columns: 3fr 5fr;
+  grid-gap: 2rem;
   padding-top: 3.5rem;
+}
+
+.contact_container .left_contact h2 {
+  margin-top: -1rem;
+  text-transform: uppercase;
+}
+
+.contact_container .left_contact p {
+  margin: .5rem 0;
+}
+
+.contact_container .left_contact .contact_item .contact_icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact_container .left_contact .contact_bottom_icons {
+  margin-top: 1rem;
+}
+
+.contact_container .left_contact .contact_bottom_icons .contact_bottom_icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.contact_container .left_contact .contact_bottom_icons .contact_bottom_icon a {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--color-grey-5);
+  text-decoration: none;
+  color: var(--color-white);
+  font-size: 1.8rem;
+}
+
+.contact_container .left_contact .contact_bottom_icons .contact_bottom_icon a:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-transition: var(--trans);
+  transition: var(--trans);
+  -webkit-box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.8);
+          box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.8);
+  background-color: var(--color-secondary);
+}
+
+.contact_container .left_contact .contact_bottom_icons .contact_bottom_icon a:hover i {
+  color: var(--color-primary);
 }
 
 .contact_container .right_contact .double_input {
@@ -741,5 +818,37 @@ section {
   padding: .8rem 1.2rem;
   font-size: inherit;
   resize: none;
+}
+
+.theme_btn {
+  position: fixed;
+  top: 5%;
+  right: 1.4%;
+  margin: .7rem 0;
+  width: 55px;
+  height: 55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  background-color: var(--color-grey-4);
+  border-radius: 50%;
+  -webkit-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
+  -webkit-box-shadow: 1px 3px 15px rgba(0, 0, 0, 0.3);
+          box-shadow: 1px 3px 15px rgba(0, 0, 0, 0.3);
+  font-size: 1.6rem;
+  color: var(--color-grey-2);
+}
+
+.theme_btn:active {
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
 }
 /*# sourceMappingURL=style.css.map */
