--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,18 +4,26 @@
     box-sizing: border-box;
     list-style: none;
 }
+.light_mode{
+        --color-primary: #fff;
+        --color-secondary: #f56692;
+        --color-white: #454e56;
+        --color-black: #000;
+        --color-grey-1: #6c7983;
+        --color-grey-2: #2e73a7;
+        --color-grey-4: #454e56;
+        --color-grey-5: #f8f8f8;
+        --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
+}
 :root{
     --color-primary: #191d2b;
     --color-secondary: #27AE60;
     --color-white: #FFFFFF;
     --color-black: #000;
-    --color-grey0: #f8f8f8;
     --color-grey-1: #dbe1e8;
     --color-grey-2: #b2becd;
-    --color-grey-3: #6c7983;
     --color-grey-4: #454e56;
     --color-grey-5: #2a2e35;
-    --color-grey-6: #12181b;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
     --trans : all .5s  ease-in-out;
@@ -43,7 +51,6 @@ section{
 // .section{
 //     transform: translateY(-100%) scale(0);
 //     transition: var(--trans);
-//     background-color: var(--color-primary);
 // }
 .active{
     display: block !important;
@@ -514,10 +521,54 @@ section{
 .contact_container{
     display: grid;
     grid-template-columns: 3fr 5fr;
+    grid-gap: 2rem;
     padding-top: 3.5rem;
-    // .left_contact{
-
-    // }
+    .left_contact{
+        h2{
+            margin-top:-1rem;
+            text-transform: uppercase;
+        }
+        p{
+            margin: .5rem 0 ;
+            // line-height: 2rem;
+        }
+        .contact_item{
+            .contact_icons{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+        }
+        .contact_bottom_icons{
+            margin-top: 1rem;
+            .contact_bottom_icon{
+                display: flex;
+                justify-content: space-around;
+                a{
+                    width: 55px;
+                    height: 55px;
+                    border-radius: 50%;
+                    cursor: pointer;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: var(--color-grey-5);
+                    text-decoration: none;
+                    color: var(--color-white);
+                    font-size: 1.8rem;
+                    &:hover{
+                        transform: scale(1.05);
+                        transition: var(--trans);
+                        box-shadow: 1px 2px 15px rgba(0,0,0,.8);
+                        background-color: var(--color-secondary);
+                        i{
+                            color: var(--color-primary);
+                        }
+                    }
+                }
+            }
+        }
+    }
     .right_contact{
         .double_input{
             display: grid;
@@ -541,3 +592,26 @@ section{
         }
     }
 }   
+
+// Theme btn 
+.theme_btn{
+    position: fixed;
+    top: 5%;
+    right: 1.4%;
+    margin: .7rem 0;
+    width: 55px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: var(--color-grey-4);
+    border-radius: 50%;
+    transition: all .1s ease-in-out;
+    box-shadow: 1px 3px 15px rgba(0,0,0,.3);
+    font-size: 1.6rem;
+    color: var(--color-grey-2);
+    &:active{
+        transform: translateY(-3px);
+    }
+}
