--- a/styles/style.css
+++ b/styles/style.css
@@ -9,12 +9,12 @@
 .light_mode {
   --color-primary: #fff;
   --color-secondary: #f56692;
-  --color-white: #454e56;
+  --color-white: #96c9f6;
   --color-black: #000;
-  --color-grey-1: #6c7983;
-  --color-grey-2: #2e73a7;
-  --color-grey-4: #454e56;
-  --color-grey-5: #f8f8f8;
+  --color-grey-1: #cbcfd2;
+  --color-grey-2: #6caee1;
+  --color-grey-4: #dce0e4;
+  --color-grey-5: #e3eeef;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
 
