--- a/styles/style.scss
+++ b/styles/style.scss
@@ -531,7 +531,6 @@ section{
         }
         p{
             margin: .5rem 0 ;
-            // line-height: 2rem;
         }
         .contact_item{
             .contact_icons{
@@ -618,7 +617,7 @@ section{
 }
 
 // Media 
-@media screen and (max-width:600px){
+@media screen and (max-width:700px){
     // header 
     .header_content{
         grid-template-columns: 1fr;
@@ -643,9 +642,7 @@ section{
             }
         }
     }
-    section{
-        padding: 3rem 3rem 6rem ;
-    }
+   
     // about 
     .about_container{
         grid-template-columns: 1fr;
@@ -701,14 +698,95 @@ section{
                 font-size: 1.4rem;
             }
         }
+        .right_contact{
+            .double_input{
+                grid-template-columns: 1fr;
+            }
+        }
     }
-
-
 
     .theme_btn{
         width: 45px;
         height: 45px;
     }
+
+}
+
+@media screen and (min-width:701px) and (max-width:970px){
+    .header_content{
+        grid-template-columns: 1fr;
+        padding-bottom: 6rem;
+        .right_header{
+            padding: 2rem 4rem !important;
+            grid-row: 1;
+            .name{
+                font-size: 3rem;
+            }
+        }
+        .left_header{
+            margin: 4rem;
+            .back_shape{
+                display: none;
+            }
+            .image{
+                padding: 0 !important;
+                width: 70%;
+                margin: 0 auto !important;
+            }
+        }
+    }
+    .contact_container{
+        grid-template-columns: 1fr;
+        .right_contact{
+            .double_input{
+                grid-template-columns: 3fr 5fr;
+            }
+        }
+    }
+}
+@media screen and (min-width:970px) and (max-width:1070px){
+    .header_content{
+        grid-template-columns: 7fr 6fr !important;
+        .left_header{
+            align-items: center;
+            .image{ 
+                margin-top: 1rem;
+                width: 80%;
+                top: 50%;
+            }
+        }
+        .right_header{
+            margin-top:2rem;
+        }
+    }
+    .contact_container{
+        grid-template-columns: 1fr 1fr;
+        .right_contact{
+            .double_input{
+                grid-template-columns: 1fr;
+            }
+        }
+    }
+}
+@media screen and (min-width:701px) and (max-width:1070px){
+    .portfolio_container, .blogs_container{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (min-width:701px) and (max-width:800px){
+    .about_container{
+        grid-template-columns: 1fr;
+    } 
+}
+@media screen and (min-width:801px) and (max-width:1070px){
+    .about_container{
+        grid-template-columns: 5fr 3fr;
+        .right_about{
+            grid-template-columns: 1fr;
+        }
+    } 
+}
+@media screen and (max-width:970px){
     .controls{
         top: auto;
         bottom: 0;
@@ -722,5 +800,10 @@ section{
         .control{
             margin-left: 1.5rem;
         }
+    }
+}
+@media screen and (max-width:1070px){
+    section{
+        padding: 3rem 3rem 6rem !important;
     }
 }
